[project]
name = "osm-retrieve"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fiona>=1.10.1",
    "geopandas>=1.1.1",
    "igraph>=1.0.0",
    "libpysal>=4.13.0",
    "matplotlib>=3.10.6",
    "mpld3>=0.5.11",
    "osmnx>=2.0.6",
    "pygeoops>=0.6.0",
    "pyrosm>=0.6.2",
    "scikit-learn>=1.7.2",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "pandas-stubs>=2.3.2.250827",
    "ruff>=0.13.2",
    "types-geopandas>=1.1.1.20250829",
]
